Fixed argo cd namespace

--- a/resources/gitea/gitea_configuration_job.yaml
+++ b/resources/gitea/gitea_configuration_job.yaml
@@ -60,7 +60,8 @@ spec:
           cd watches-eshop
           git config user.email "gitea@gitea.com"
           git config user.name "gitea"
-          grep -rl "@GITEA_HOST_CHANGEME" . | xargs sed -i "s/@GITEA_HOST_CHANGEME/$GITEA_HOSTNAME/g"
+          grep -rl "@GITEA_HOST_CHANGEME" resources/argocd/ | xargs sed -i "s/@GITEA_HOST_CHANGEME/$GITEA_HOSTNAME/g"
+          grep -rl "@GITEA_HOST_CHANGEME" deploy/ | xargs sed -i "s/@GITEA_HOST_CHANGEME/$GITEA_HOSTNAME/g"
           git add . && git commit -m "Updated Gitea host" && git push
           
           echo "------------------------------"
