--- a/resources/argocd/watches-eshop.yaml
+++ b/resources/argocd/watches-eshop.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: watches-eshop
-  namespace: openshift-gitops
+  namespace: watches-eshop-cicd
   # ONLY if you want these to cascade delete
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -14,6 +14,6 @@ spec:
     path: resources/argocd/app-sets.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace:  openshift-gitops
+    namespace: watches-eshop-cicd
   syncPolicy:
     automated: {}
