--- a/resources/argocd/app-sets.yaml/catalog.yaml
+++ b/resources/argocd/app-sets.yaml/catalog.yaml
@@ -5,17 +5,17 @@ metadata:
 spec:
   generators:
     - git:
-        repoURL: http://@GITEA_HOST_CHANGEME/gitea/watches-eshop.git
+        repoURL: http://@GITEA_HOSTNAME/gitea/watches-eshop.git
         revision: master
         files:
-          - path: "argocd/configuration/*.json"
+          - path: "resources/argocd/configuration/*.json"
   template:
     metadata:
       name: 'catalog-{{ environment }}'
     spec:
       project: default
       source:
-        repoURL: http://@GITEA_HOST_CHANGEME/gitea/watches-eshop.git
+        repoURL: http://@GITEA_HOSTNAME/gitea/watches-eshop.git
         targetRevision: '{{ argo_config.branch }}'
         path: 'deploy/catalog/overlays/{{ environment }}'
       destination:
