--- a/deploy/eshop-ui/overlays/dev/kustomization.yaml
+++ b/deploy/eshop-ui/overlays/dev/kustomization.yaml
@@ -4,15 +4,17 @@ kind: Kustomization
 bases:
 - ../../base
 
-resources: {}
+resources:
+- buildConfig.yaml
+- imageStream.yaml
 
-nameSuffix: -prod
+nameSuffix: -dev
 
 commonLabels:
-  app: catalog-prod
-  app.kubernetes.io/component: catalog-prod
-  app.kubernetes.io/instance: catalog-prod
-  app.kubernetes.io/part-of: watches-eshop-prod
+  app: catalog-dev
+  app.kubernetes.io/component: catalog-dev
+  app.kubernetes.io/instance: catalog-dev
+  app.kubernetes.io/part-of: watches-eshop-dev
 
 patches:
 - ./deployment.yaml
