--- a/deploy/catalog/base/kustomization.yaml
+++ b/deploy/catalog/base/kustomization.yaml
@@ -2,10 +2,29 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 commonLabels:
+  app: catalog
+  app.kubernetes.io/component: catalog
+  app.kubernetes.io/instance: catalog
   app.kubernetes.io/name: ubi8-openjdk-11
+  app.kubernetes.io/part-of: watches-eshop
   app.openshift.io/runtime: spring-boot
 
 resources:
 - deployment.yaml
 - service.yaml
 - route.yaml
+
+configMapGenerator:
+- name: catalog-configuration
+  envs:
+  - properties.env
+
+secretGenerator:
+- name: catalog-secured-configuration
+  envs:
+  - secured.env
+
+images:
+- name: catalog
+  newName: quay.io/ansible_eda/catalog
+  newTag: 1.0.0
