--- a/deploy/eshop-ui/base/deployment.yaml
+++ b/deploy/eshop-ui/base/deployment.yaml
@@ -1,29 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: catalog
+  name: eshop-ui
   annotations:
-    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catalog-db"}]'
+    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"order"},{"apiVersion":"apps/v1","kind":"Deployment","name":"catalog"},{"apiVersion":"apps/v1","kind":"Deployment","name":"payment"}]'
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   strategy:
     rollingUpdate:
-      maxSurge: 25% 
+      maxSurge: 25%
       maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
     spec: 
       containers:
-      - name: catalog
-        envFrom: 
-        - configMapRef:
-            name: catalog-configuration
-        - secretRef:
-            name: catalog-secured-configuration
-        image: catalog:version
+      - name: eshop-ui
+        image: eshop-ui:version
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
@@ -31,8 +26,16 @@ spec:
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /usr/share/nginx/html/assets/config
+          name: volume-fpp8z
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      volumes:
+      - configMap:
+          defaultMode: 420
+          name: eshop-config
+        name: volume-fpp8z
