--- a/deploy/order/base/route.yaml
+++ b/deploy/order/base/route.yaml
@@ -1,12 +1,12 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: catalog
+  name: order
 spec:
   port:
     targetPort: 8080-tcp
   to:
     kind: Service
-    name: catalog
+    name: order
     weight: 100
   wildcardPolicy: None
