--- a/deploy/payment/base/deployment.yaml
+++ b/deploy/payment/base/deployment.yaml
@@ -1,29 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: catalog
+  name: payment
   annotations:
-    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catalog-db"}]'
+    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"payment-db"}]'
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   strategy:
     rollingUpdate:
-      maxSurge: 25% 
+      maxSurge: 25%
       maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
     spec: 
       containers:
-      - name: catalog
+      - name: payment
         envFrom: 
         - configMapRef:
-            name: catalog-configuration
+            name: payment-configuration
         - secretRef:
-            name: catalog-secured-configuration
-        image: catalog:version
+            name: payment-secured-configuration
+        image: payment:version
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
