--- a/deploy/payment/base/deployment.yaml
+++ b/deploy/payment/base/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: payment
   annotations:
-    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"payment-db"}]'
+    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deploy","name":"payment-db"}]'
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
@@ -26,7 +26,7 @@ spec:
         image: payment:version
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8080
+        - containerPort: 5000
           protocol: TCP
         resources: {}
         terminationMessagePath: /dev/termination-log
