--- a/deploy/catalog/base/deployment.yaml
+++ b/deploy/catalog/base/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: catalog
   annotations:
-    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catalog-db"}]'
+    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"catalog-db"}]'
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
