--- a/deploy/payment-db/base/deployment.yaml
+++ b/deploy/payment-db/base/deployment.yaml
@@ -1,42 +1,44 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order
-  annotations:
-    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"order-db"}]'
+  name: payment-db
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   strategy:
     rollingUpdate:
-      maxSurge: 25%
+      maxSurge: 25% 
       maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
     spec: 
       containers:
-      - name: order
+      - name: payment-db
         envFrom: 
-        - configMapRef:
-            name: order-configuration
         - secretRef:
-            name: order-secured-configuration
-        image: order:version
+            name: payment-db-secured-configuration
+        image: mongo:version
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8778
-          protocol: TCP
-        - containerPort: 8080
-          protocol: TCP
-        - containerPort: 8443
+        - containerPort: 27017
           protocol: TCP
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /data/configdb
+          name: payment-db-volume-1
+        - mountPath: /data/db
+          name: payment-db-volume-2
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      volumes:
+      - emptyDir: {}
+        name: payment-db-volume-1
+      - emptyDir: {}
+        name: payment-db-volume-2
