--- a/watches-eshop.yaml
+++ b/watches-eshop.yaml
@@ -2,17 +2,17 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: watches-eshop
-  namespace: ansible-eda-demo
+  namespace: argo-gitops
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://gitlab.com/ansible-eda-dynatrace-demo/watches-eshop.git
+    repoURL: https://github.com/clbartolome/watches-eshop
     targetRevision: master
     path: app-sets
   destination:
     server: https://kubernetes.default.svc
-    namespace: ansible-eda-demo
+    namespace: argo-gitops
   syncPolicy:
     automated: {}
