--- a/deploy/gateway/base/deployment.yaml
+++ b/deploy/gateway/base/deployment.yaml
@@ -1,22 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: eshop-ui
+  name: gateway
+  annotations:
+    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"order"},{"apiVersion":"apps/v1","kind":"Deployment","name":"catalog"},{"apiVersion":"apps/v1","kind":"Deployment","name":"payment"}]'
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   strategy:
     rollingUpdate:
-      maxSurge: 25%
+      maxSurge: 25% 
       maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
     spec: 
       containers:
-      - name: eshop-ui
-        image: eshop-ui:version
+      - name: gateway
+        envFrom: 
+        - configMapRef:
+            name: gateway-configuration
+        image: gateway:version
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
@@ -24,16 +29,8 @@ spec:
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
-        volumeMounts:
-        - mountPath: /usr/share/nginx/html/assets/config
-          name: volume-fpp8z
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-      volumes:
-      - configMap:
-          defaultMode: 420
-          name: eshop-config
-        name: volume-fpp8z
