--- a/app-sets/watches-eshop-applications.yml
+++ b/app-sets/watches-eshop-applications.yml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: watches-eshop-applications
-  namespace: argo-gitops
+  namespace: openshift-gitops
 spec:
   generators:
     - git:
