--- a/install/roles.yaml
+++ b/install/roles.yaml
@@ -9,5 +9,5 @@ roleRef:
   name: admin
 subjects:
 - kind: ServiceAccount
-  name: argocd-argocd-application-controller 
-  namespace: argo-gitops
+  name: openshift-gitops-argocd-application-controller 
+  namespace: openshift-gitops
