--- a/watches-eshop.yaml
+++ b/watches-eshop.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/clbartolome/watches-eshop
-    targetRevision: ocp4-cfernand-com
+    targetRevision: CHANGE_BRANCH_NAME
     path: app-sets
   destination:
     server: https://kubernetes.default.svc
