--- a/deploy/gateway/base/deployment.yaml
+++ b/deploy/gateway/base/deployment.yaml
@@ -15,6 +15,8 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec: 
       containers:
       - name: gateway
