Included istio label annotation. Included ingress and virtual service

--- a/deploy/gateway/overlays/service-mesh/kustomization.yaml
+++ b/deploy/gateway/overlays/service-mesh/kustomization.yaml
@@ -4,6 +4,10 @@ kind: Kustomization
 bases:
   - ../../base
 
+resources:
+- gateway.yaml
+- virtual-service.yaml
+
 patchesStrategicMerge:
 - |-
   apiVersion: route.openshift.io/v1
