--- a/deploy/eshop-ui/base/config.json
+++ b/deploy/eshop-ui/base/config.json
@@ -1,8 +1,8 @@
 {
-  "watchUrl": "http://gateway-watches-eshop.apps.ocp4cluster.ocp4.cfernand.com",
+  "watchUrl": "http://istio-ingressgateway-istio-system.apps.ocp4cluster.ocp4.cfernand.com",
   "watchPath": "/gw-catalog/watches",
-  "paymentUrl": "http://gateway-watches-eshop.apps.ocp4cluster.ocp4.cfernand.com",
+  "paymentUrl": "http://istio-ingressgateway-istio-system.apps.ocp4cluster.ocp4.cfernand.com",
   "paymentPath": "/gw-payment/payments",
-  "orderUrl": "http://gateway-watches-eshop.apps.ocp4cluster.ocp4.cfernand.com",
+  "orderUrl": "http://istio-ingressgateway-istio-system.apps.ocp4cluster.ocp4.cfernand.com",
   "orderPath": "/gw-order/orders"
 }
