--- a/deploy/gateway/base/properties.env
+++ b/deploy/gateway/base/properties.env
@@ -1,4 +1,4 @@
-ORDER_SERVICE_URL=http://order.watches-eshop.svc.cluster.local:8080
-CATALOG_SERVICE_URL=http://catalog.watches-eshop.svc.cluster.local:8080
-PAYMENT_SERVICE_URL=http://payment.watches-eshop.svc.cluster.local:5000
+ORDER_SERVICE_URL=order:8080
+CATALOG_SERVICE_URL=catalog:8080
+PAYMENT_SERVICE_URL=payment:5000
 PORT=8080
